[package]
name = "metronome"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["advanced", "lazy", "svg", "tokio"] }
rodio = { version = "0.19.0", features = ["symphonia-all"] }
tokio = { version = "1.41.0", features = ["rt", "sync", "time"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
